Archive2/a4/7fec085e769807/output
main.cpp:14:18: error: expected a qualified name after 'typename'
typedef typename result_of<F()>::type MyInt;
                 ^
main.cpp:14:27: error: expected ';' after top level declarator
typedef typename result_of<F()>::type MyInt;
                          ^
                          ;
2 errors generated.
